# personal_wiki_agent

./: .gitattributes  .gitignore  README.md  rules.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agent_tools/: __init__.py  build_topic_map.py  open_source.py  search_notes.py  summarize_folder.py
backend/app/answer/: __init__.py  context_builder.py  synthesizer.py
backend/app/api/: routes_chat.py  routes_documents.py  routes_health.py  routes_index.py  routes_memory.py  routes_search.py  routes_sources.py
backend/app/connectors/: __init__.py  base.py  local_directory.py  local_synced_notes.py  obsidian_vault.py
backend/app/core/: config.py  errors.py  logging.py  paths.py  settings.py
backend/app/db/: session.py
backend/app/indexing/: __init__.py  chunker.py  embedding.py  lexical.py  pipeline.py  sqlite_fts.py  sync.py  vector_store.py
backend/app/llm/: __init__.py  catalog.py  ollama_provider.py  openai_provider.py  provider.py  registry.py  router.py
backend/app/memory/: __init__.py  extractor.py  store.py
backend/tests/: test_agent_tools.py  test_chat_api.py  test_chunker.py  test_connectors_base.py  test_cors.py  test_health.py  test_hybrid_retriever.py  test_indexing_pipeline.py  test_memory.py  test_migrations.py  test_model_registry.py  test_models.py  test_parsers.py  test_search_api.py  test_settings.py  test_source_index_api.py  test_sqlite_fts.py  test_sync_detection.py  test_vector_store_contract.py
(+51 files in other folders)
