[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-wiki-agent-backend"
version = "0.1.0"
description = "Backend service for Personal Wiki Agent."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "PyMuPDF>=1.23.0",
    "pyyaml>=6.0.0",
    "python-docx>=1.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
